log
Thu 21 Mar 2024 09:34:28 PM UTC: 
 tests:  0|5
total_score: 0/70
92e3093
Thu 21 Mar 2024 09:58:15 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
2f266bd
Thu 21 Mar 2024 09:58:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
38d5276
Thu 21 Mar 2024 10:01:40 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:18: error: invalid use of undefined type ‘struct List’
   63 |     sumaElem += L[i];
      |                  ^
exercises.c:63:17: error: invalid use of incomplete typedef ‘List’
   63 |     sumaElem += L[i];
      |                 ^
Compilation failed
3412063
Thu 21 Mar 2024 10:02:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:20: error: invalid use of undefined type ‘struct List’
   63 |     sumaElem += *(L[i]);
      |                    ^
exercises.c:63:18: error: invalid use of incomplete typedef ‘List’
   63 |     sumaElem += *(L[i]);
      |                  ^
Compilation failed
19c23cc
Thu 21 Mar 2024 10:08:06 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:64:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |     sumaElem += elem;
      |              ^~
cc1: all warnings being treated as errors
Compilation failed
6152dd9
Thu 21 Mar 2024 10:08:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
d20592f
Thu 21 Mar 2024 10:17:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 20/70
4a88f6c
Thu 21 Mar 2024 10:17:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:102:11: error: ‘true’ undeclared (first use in this function)
  102 |    return true;
      |           ^~~~
exercises.c:8:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    7 | #include "stack.h"
  +++ |+#include <stdbool.h>
    8 | 
exercises.c:102:11: note: each undeclared identifier is reported only once for each function it appears in
  102 |    return true;
      |           ^~~~
exercises.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
daf10d0
Thu 21 Mar 2024 10:17:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ada0290
